+ | SML | Tweak/AboutMe/Paragraph -- Adjusted some language and added a few more programs to my self-taught list

--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
             <div class="col-sm-12">
               <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
               <h4>
-                <span class="biggerfont">
-                  I am a self-taught GIS Developer</span
-                >
-                using my knowledge of web-development, geospatial-analysis, and
-                design to visualize maps in cool meaningful ways. Those visuals
-                become narratives, and those narratives (hopefully in a small
-                way) empower positive change. <br /><br />
+                <span class="biggerfont"> I am a self-taught full-stack GIS Developer</span
+                >, focuses on urban design, climate change, and the growing
+                socio-economic divide. I use my knowledge of web-design,
+                geospatial-analysis, and data-viz to distil complex analysis
+                from these subjects into easy-to-digest map-narratives. These
+                narratives can teach wider audiences and (hopefully) empower
+                positive change. <br /><br />
                 <span class="biggerfont">
                   I am the founder of TucsonPathways.org</span
                 >
@@ -312,15 +312,16 @@
                 <span class="biggerfont"> I graduated with distinction</span>
                 in Applied Mathematics & Environmental Hydrology from the
                 University of Arizona in the Spring of 2013, working odd-jobs
-                and internships throughout to pay my way through college.
+                and internships throughout to pay my own way through college.
                 <br /><br />
-                <span class="biggerfont">I am a self-learner </span>in a wide
-                array of technical softwares - ArcGIS, QGIS, Spatial Analysis
-                Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS, Javascript ES6,
-                git, VSCode, Mapbox-GL, Leaflet, Node, Aerial Drone Mapping,
-                Graphhopper, SQL, Python, Vue.js, D3.js, Database Management,
-                Microsoft Office Suite, along with several others supplementary
-                programs. <br /><br />
+                <span class="biggerfont">I am a self-educated </span>in
+                numerous programming languages and technical softwares - ArcGIS,
+                QGIS, Spatial Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5,
+                CSS, Javascript, Node, git version control, VSCode, Vue.js,
+                Mapbox-GL, Mapbox-Studio, JSON formatting, Leaflet, Drone
+                Mapping, SQL, Graphhopper, D3.js, Turf.js, Python, Firebase,
+                Netlify, Microsoft Office Suite, along with several others
+                supplementary programs. <br /><br />
                 <span class="biggerfont"
                   >I am a published technical writer </span
                 >with the United States Geological Survey for my work in using
@@ -329,12 +330,12 @@
                 Resources Institute for my GIS contributions to the Forest
                 Conservation Natural Infrastructure Program. <br /><br />
                 <span class="biggerfont">Through years past </span>I've worked
-                as a bike mechanic, warehouse laborer, bartender, GIS analyst,
-                hydrological technican, waste collector, research analyst,
-                community-farm laborer, and freelance movie critic. I've
-                bike-toured across the country, competed in the Ultimate Frisbee
-                College National Championships, and volunteered as youth
-                rock-climbing instructor. <br /><br />
+                as a bike mechanic, warehouse laborer, bartender, hydrological
+                technican, waste collector, research analyst, community-farm
+                laborer, and freelance movie critic. I've bike-toured across the
+                country, competed in the Ultimate Frisbee College National
+                Championships, and volunteered as youth rock-climbing
+                instructor. <br /><br />
                 <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
                       <br><br> -->
                 <!-- <div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban analysis. Cities across the planet are subject to various laws and policies. All of which are harmonizing or destabilizing - whether economic stratification, environmental decline, racial inequity, political polarization, literacy. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
@@ -474,8 +475,8 @@
                     CARTOGRAPHIC DESIGN<br /><br />
                   </div>
                   <div class="project-name">
-                    Data visualization of city-space dedicated to people
-                    versus cars<br /><br />(Personal Project)
+                    Data visualization of city-space dedicated to people versus
+                    cars<br /><br />(Personal Project)
                   </div>
                 </div>
               </div>
@@ -486,18 +487,15 @@
               href="https://tucsonauts.github.io/tnr/compare"
               class="portfolio-box"
             >
-              <img
-                src="img/Compare.png"
-                class="img-responsive"
-                alt=""
-              />
+              <img src="img/Compare.png" class="img-responsive" alt="" />
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
                     CARTOGRAPHIC DESIGN<br /><br />
                   </div>
                   <div class="project-name">
-                    Data visualization map-slider between city's high-traffic roads & low-traffic roads<br /><br />(Personal Project)
+                    Data visualization map-slider between city's high-traffic
+                    roads & low-traffic roads<br /><br />(Personal Project)
                   </div>
                 </div>
               </div>
@@ -508,18 +506,16 @@
               href="https://dylansc22.github.io/nightglow"
               class="portfolio-box"
             >
-              <img
-                src="img/NightLights.png"
-                class="img-responsive"
-                alt=""
-              />
+              <img src="img/NightLights.png" class="img-responsive" alt="" />
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
                     CARTOGRAPHIC DESIGN<br /><br />
                   </div>
                   <div class="project-name">
-                    Data visualization of Tucson at night, simulating the glow of street-lights & house-lights<br /><br />(Personal Project)
+                    Data visualization of Tucson at night, simulating the glow
+                    of street-lights & house-lights<br /><br />(Personal
+                    Project)
                   </div>
                 </div>
               </div>
@@ -541,7 +537,8 @@
                     CARTOGRAPHIC DESIGN<br /><br />
                   </div>
                   <div class="project-name">
-                    Data visualization of the best bicycle-touring routes of the four corner states<br /><br />(Personal Project)
+                    Data visualization of the best bicycle-touring routes of the
+                    four corner states<br /><br />(Personal Project)
                   </div>
                 </div>
               </div>
