TLDR | Word-Choice | More tweaks to about section

--- a/index.html
+++ b/index.html
@@ -4316,12 +4316,13 @@
         <h4>
           <span class="biggerfont">
             I am a self-taught full-stack GIS Developer</span
-          >, focuses on projects in city-design, climate change, and the growing
-          socio-economic divide. My goal is to help organizations reach widers
-          audiences by taking complex-scientific-narratives and distilling them
-          into easy-to-digest infographics and maps. Those visuals enable a
-          deeper connecting to the underlying science and hopefully can empower
-          positive change<br /><br />
+          >
+          meaning I work with analyzing and communicating spatial datasets -
+          often with a focus on city-design, climate change, and the growing
+          socio-economic divide. The goal is help organizations communicate. And
+          doing so by translating complex research narratives into
+          easy-to-digest maps and apps in order to reach wide audiences.
+          <br /><br />
           <span class="biggerfont">
             I am the founder of TucsonPathways.org</span
           >
