TLDR | Added Covid Volunteering | Maybe a bit wordy at this point, but added covid scribing.

--- a/index.html
+++ b/index.html
@@ -4352,10 +4352,8 @@
           Program. <br /><br />
           <span class="biggerfont">Through years past </span>I've worked as a
           bike mechanic, warehouse laborer, bartender, hydrological technican,
-          waste collector, research analyst, community-farm laborer, and
-          freelance movie critic. I've bike-toured across the country, competed
-          in the Ultimate Frisbee College National Championships, and
-          volunteered as youth rock-climbing instructor. <br /><br />
+          waste collector, research analyst, community-farm laborer,
+          freelance movie critic, and currently volunteer on weekends as a medical scribe for the Covid-19 vaccine effort. In spare time, I love bike-touring, competitive ultimate frisbee, and volunteering as a youth rock-climbing instructor. <br /><br />
           <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
                       <br><br> -->
           <!-- <div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban analysis. Cities across the planet are subject to various laws and policies. All of which are harmonizing or destabilizing - whether economic stratification, environmental decline, racial inequity, political polarization, literacy. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
